--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
         </div>
       </div>
       <div class="footer-bottom justify-content-center text-center">
-        <p class="mb-0">Copyright © 2019 <a href="https://tanjilrahman.com" target="_blank">TANJIL RAHMAN</a> All Rights Reserved</p>
+        <p class="mb-0">Copyright © 2019 <a href="https://rashed964.github.io/maxon-agency/" target="_blank">Rashed</a> All Rights Reserved</p>
       </div>
     </footer>
 
